:zap: updated logging command. logging channel, guild and keys blacklisting channels, user and keys ATTENTION some keys in the json changed.
if you need to get all not blacklisted channels out use following code in debug before you update:
','.join(str(x.id) for x in bot.guilds if x.id not in self.logging.get('block-guild', []))

--- a/config/log.json.example
+++ b/config/log.json.example
@@ -1,7 +1,8 @@
 {
-    "key-blocked": [],
-    "block-server": [],
+    "block-key": [],
     "block-user": [],
     "block-channel": [],
-    "key": []
+    "key": [],
+    "guild": [],
+    "channel": []
 }
