:sparkles: Added webhook feature. If you want to use the webhook you have to create a webhook for your log channel and copy the whole Webhook url into your config file on the key "webhook_token" if you dont want the webhook or dont't enter something there you will stay with the old notification, if you enter something wrong, and it fails, the same.

--- a/config/config.json.example
+++ b/config/config.json.example
@@ -11,5 +11,6 @@
     "mal_password": "",
     "custom_search_engine": "",
     "restart_channel": ,
-    "restart": ""
+    "restart": "",
+    "webhook_token":""
 }
