--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp == 2.0.5
 beautifulsoup4 == 4.5.3
 git+https://github.com/Rapptz/discord.py@rewrite
+discord.webhooks==0.0.3
 lxml == 3.7.3
 psutil == 5.2.1
 python_dateutil == 2.6.0
