--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-aiohttp == 2.0.5
+aiohttp == 2.0.7
 beautifulsoup4 == 4.5.3
+colour == 0.1.3
 git+https://github.com/Rapptz/discord.py@rewrite
-discord.webhooks==0.0.3
+discord.webhooks == 0.0.3
 lxml == 3.7.3
 psutil == 5.2.1
 python_dateutil == 2.6.0
